--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "hono": "^4.7.7",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
